--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -394,7 +394,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="/react_demo/assets/iframe-B1Yfy-v9.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CJ3QuUcW.js"></script>
   </head>
 
   <body>
